# candidate-ranking-agent

./: .env  .env.example  .gitignore  README.md  agent.py  eval_agent.py  main.py  models.py  pyproject.toml  ranking_engine.py
data/: README.md  benchmark_dataset.jsonl
data/evaluations/: README.md
